Adding machine API
