# pkg/api/v1/docs/api_swagger.json
@@ -71,6 +71,51 @@
                     }
                 }
             }
+        },
+        "/status": {
+            "post": {
+                "description": "Refreshes the status of a machine",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "discovery"
+                ],
+                "parameters": [
+                    {
+                        "description": "Status Refresh Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.StatusRefreshRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -120,6 +165,17 @@
         },
         "models.HealthResponse": {
             "type": "object"
+        },
+        "models.StatusRefreshRequest": {
+            "type": "object",
+            "properties": {
+                "machine_id": {
+                    "type": "string"
+                },
+                "machine_ip": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
