# pkg/api/v1/models/machine.go
@@ -1,0 +1,6 @@
+package models
+
+type MachineRegisterRequest struct {
+	MachineID string `json:"machine_id"`
+	MachineIP string `json:"machine_ip"`
+}
